# SLM-RAG-EVAL

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  pyproject.toml
scripts/: no_rag_generate.py
scripts/dataset_creation/: README.md  collect_data.py  datasets_config.yaml  get_data.py  utils.py
src/bench_eval/: benchmark_evaluation.py  eval_conf.py  evaluation.py
src/bench_eval/bench_preprocess/: classify_questions.py  clean_empty_answers.py  create_dataset.py  create_subset.py  make_golden_answers.py  mix_datasets.py  only_one_dataset.py  rm_datasets.py  rm_unused_data.py  shuffle_fields.py
src/bench_eval/utils/: stats.py  text_processors.py
src/judge_eval/: generate_ratings.py  judge_aggregation.py  judge_metrics.py
src/model/: api_model.py  gemma_model.py  vllm.py
src/rag_eval/: run_bench.py
src/rag_eval/evaluation_steps/: gen_answers.py  llm_as_judge.py  process_answers.py
src/rag_eval/llm_judge/: local_judge.py
src/rag_eval/metrics/: llm.py  non_llm.py
src/rag_eval/metrics_aggregation/: aggregation.py  non_llm_metrics.py  show_llm_result.py
src/services/: launch_vllm.sh  vllm.py
src/shared/: constants.py  load_config.py  paths.py  prompts.py  schemas.py
src/stats/: combine_results.py  get_letter_stats.py  utils.py
tests/: get_mark_llm_test.py  hitatk_test.py  mrr_test.py  ngram_diversity_test.py  recatk_test.py  stats_test.py
